# games

./: .gitignore  CMakeLists.txt  main.cpp  test.cpp
example/: doublependulum.cpp  game_of_life.cpp
include/: canvas.hpp  color.hpp  g2d.hpp  g3d.hpp  geometry2d.hpp  mat.hpp  util.hpp  window.hpp
